# esp32c3_mqtt_ddsu666

./: .gitignore  CMakeLists.txt  README.md  esp32c3_mqtt_ddsu666.sln  esp32c3_mqtt_ddsu666.vgdbproj  partitions.csv  sdkconfig  sdkconfig.old
.visualgdb/CodeDB/esp32c3_mqtt_ddsu666.vgdbproj-Debug-VisualGDB/: GlobalFileTable.000  GlobalFileTable.001  app_main.npa00  app_main.npd  app_main.rdb  app_startup.npa00  app_startup.npd  app_startup.rdb  codedb.lck  form_parser.rdb  led.npa00  led.npd  led.rdb  mqtt4.npa00  mqtt4.npd  mqtt4.rdb  mqtt_client.rdb  ota.npa00  ota.npd  ota.rdb  panic.rdb  task_wdt.rdb  tmp00000003.npa00  tmp00000009.npa00  tmp0000000c.npa00  tmp0000000d.npa00  tmp0000000e.npa00  tmp00000013.npa00  tmp00000014.npa00  tools.npa00  tools.npd  tools.rdb  uart-00001.npa01  uart-00001.npd  uart-00001.rdb  watchdog.npa00  watchdog.npd  watchdog.rdb  web_handler.npa00  web_handler.npd  (+4 more)
.visualgdb/CodeDB/esp32c3_mqtt_ddsu666.vgdbproj-Release-VisualGDB/: GlobalFileTable.000  GlobalFileTable.001  app_main.hpa00  app_main.hpd  app_main.npa00  app_main.npd  app_main.rdb  cJSON.rdb  codedb.lck  esp_app_desc.rdb  esp_netif_lwip.npa00  esp_netif_lwip.npd  esp_netif_lwip.rdb  form_parser.rdb  led.npa00  led.npd  led.rdb  mqtt4.npa00  mqtt4.npa01  mqtt4.npd  mqtt4.rdb  mqtt_client.npa00  mqtt_client.npd  (+104 more)
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  form_parser.h  ir.h  ir_nec_decoder.h  led.c  led.h  mqtt4.c  mqtt4.h  ota.c  ota.h  tools.c  tools.h  uart.c  uart.h  version.h  watchdog.c  watchdog.h  web_handler.c  web_handler.h  wifimanager.c  wifimanager.h
(+484 files in other folders)
